test/corpus/term_list.txt
================================================================================
empty
================================================================================

[]

--------------------------------------------------------------------------------

(source_file
  (expression
    (expr_list)))

================================================================================
list of size 1
================================================================================

[1]

--------------------------------------------------------------------------------

(source_file
  (expression
    (expr_list
      (expression
        (term
          (integer))))))

================================================================================
pair
================================================================================

[1, a]

--------------------------------------------------------------------------------

(source_file
  (expression
    (expr_list
      (expression
        (term
          (integer)))
      (expression
        (term
          (atom
            (unquoted_atom)))))))

================================================================================
nested lists
================================================================================

[ok, [1, []]]

--------------------------------------------------------------------------------

(source_file
  (expression
    (expr_list
      (expression
        (term
          (atom
            (unquoted_atom))))
      (expression
        (expr_list
          (expression
            (term
              (integer)))
          (expression
            (expr_list)))))))

================================================================================
lists consing
================================================================================

[ok | [1 | []]]

--------------------------------------------------------------------------------

(source_file
  (expression
    (expr_list
      (expr_list_cons
        (expression
          (term
            (atom
              (unquoted_atom))))
        (expression
          (expr_list
            (expr_list_cons
              (expression
                (term
                  (integer)))
              (expression
                (expr_list)))))))))
