test/corpus/term_map.txt
================================================================================
empty
================================================================================

#{}

--------------------------------------------------------------------------------

(source_file
  (expression
    (term
      (map))))

================================================================================
with one key and value
================================================================================

#{ hello => world }

--------------------------------------------------------------------------------

(source_file
  (expression
    (term
      (map
        (map_entry
          (term
            (atom
              (unquoted_atom)))
          (expression
            (term
              (atom
                (unquoted_atom)))))))))

================================================================================
with many keys and values
================================================================================

#{
  hello => joe,
  goodbye => moe
  }

--------------------------------------------------------------------------------

(source_file
  (expression
    (term
      (map
        (map_entry
          (term
            (atom
              (unquoted_atom)))
          (expression
            (term
              (atom
                (unquoted_atom)))))
        (map_entry
          (term
            (atom
              (unquoted_atom)))
          (expression
            (term
              (atom
                (unquoted_atom)))))))))
